--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian Zhu Chou - Portfolio</title>
-    <link rel="stylesheet" href="Portfolio_style.css">
+    <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap">
 </head>
 
@@ -50,7 +50,7 @@
         </section>
     </div>
 
-    <script src="Portfolio_script.js"></script>
+    <script src="javascript.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </body>
 </html>
