--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adrian Zhu Chou - Portfolio</title>
+    <title>Adrian Zhu Chou's Portfolio</title>
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap">
 </head>
@@ -23,7 +23,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="https://drive.google.com/file/d/1HeMpqanCmtdYf2i0ahA0_AxqtUzSG7Lv/view?usp=drive_link" target="_blank">Resume</a></li>
+                    <li><a href="https://drive.google.com/file/d/1ft1N8cXp-T9SN-QenVEotLKIR4TDiKez/view?usp=sharing" target="_blank">Resume</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
