--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            <div class="mobile-menu-icon">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </header>
 
         <section id="home" class="page active">
