--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </header>
 
         <section id="home" class="page active">
-            <h2>Born and raised in the vibrant city of Santa Cruz de la Sierra, Bolivia.<br>
-                I bring a world of diverse experiences to the table.<br>
-                With an insatiable passion for learning, a boundless spirit of exploration, and a relentless drive to experiment and innovate.</h2>
+            <h2>Recent Cognitive Science graduate with a Specialization in Design and Interaction.<br>
+            Proficient in HTML, CSS, JavaScript, eager to bring creativity and fresh insights to dynamic web projects.<br>
+            Ready to contribute and elevate your team’s web development endeavors.
         </section>
 
         <section id="projects" class="page">
