--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="home" class="page active">
             <h3>Recent Cognitive Science graduate with a Specialization in Design and Interaction.<br>
             Proficient in HTML, CSS, JavaScript, eager to bring creativity and fresh insights to dynamic web projects.<br>
-            Ready to contribute and elevate your team’s web development endeavors.</h3>
+            Ready to contribute and elevate your team's web development endeavors.</h3>
         </section>
 
         <section id="projects" class="page">
