--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian Zhu Chou's Portfolio</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Namdhinggo:wght@400;500;600;700;800&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,8 +16,7 @@
         <header>
             <h1>Adrian Zhu Chou</h1>
             <nav>
-                <div>
-                    <div class="bar"></div>
+                <div class="mobile-menu-icon">
                     <div class="bar"></div>
                     <div class="bar"></div>
                     <div class="bar"></div>
@@ -30,9 +31,9 @@
         </header>
 
         <section id="home" class="page active">
-            <h2>Born and raised in the vibrant city of Santa Cruz de la Sierra, Bolivia.<br>
-                I bring a world of diverse experiences to the table.<br>
-                With an insatiable passion for learning, a boundless spirit of exploration, and a relentless drive to experiment and innovate.</h2>
+            <h3>Recent Cognitive Science graduate with a Specialization in Design and Interaction.<br>
+            Proficient in HTML, CSS, JavaScript, eager to bring creativity and fresh insights to dynamic web projects.<br>
+            Ready to contribute and elevate your team's web development endeavors.</h3>
         </section>
 
         <section id="projects" class="page">
