--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div id="particles-js"></div>
     <div class="container">
         <header>
-            <h1>Adrian Zhu Chou</h1>
+            <h1>
+                <span class="full-name">Adrian Zhu Chou</span>
+                <span class="abbreviation">AZC</span>
+            </h1>
             <nav>
                 <div class="mobile-menu-icon">
                     <div class="bar"></div>
